Enhance index.html with image and navigation links
Added an image and buttons for Tokenomics and Treasury Model.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
 <body>
 
 <header>
+  <img src="tsx-coin.png" alt="TSX Coin" style="width:180px; margin-bottom:20px;">
+  <h1>TSX TaxShield</h1>
+  <p>A self-sustaining crypto ecosystem built for everyday people.</p>
+
+  <div style="margin-top:25px;">
+    <a href="#tokenomics" style="padding:12px 20px; background:#f5c16c; color:#000; text-decoration:none; border-radius:6px; margin-right:10px;">
+      Read Tokenomics
+    </a>
+    <a href="#treasury" style="padding:12px 20px; background:#f5c16c; color:#000; text-decoration:none; border-radius:6px;">
+      View Treasury Model
+    </a>
+  </div>
+</header>
+<header>
   <h1>TSX TaxShield</h1>
   <h2>A self-sustaining crypto ecosystem built for everyday people.</h2>
 
