Update TSX Coin image source in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 <body>
 
 <header>
-  <img src="tsx-coin.png" alt="TSX Coin" style="width:180px; margin-bottom:20px;">
+  <img src="https://raw.githubusercontent.com/ver418/tsx/main/b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX Coin" style="width:180px; margin-bottom:20px;">
+
   <h1>TSX TaxShield</h1>
   <p>A self-sustaining crypto ecosystem built for everyday people.</p>
 
