--- a/index.html
+++ b/index.html
@@ -4,60 +4,224 @@
   <meta charset="UTF-8">
   <title>TSX TaxShield</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: radial-gradient(circle at top, #3a1c5a, #14061f);
-      color: #f5e6c8;
-      text-align: center;
-    }
-    header {
-      padding: 60px 20px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-    h2 {
-      font-weight: normal;
-      color: #e0cfa0;
-    }
-    .buttons {
-      margin-top: 30px;
-    }
-    .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 14px 26px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #14061f;
-      background: linear-gradient(135deg, #c9a84e, #9f7f2e);
-    }
-    section {
-      max-width: 900px;
-      margin: 60px auto;
-      padding: 0 20px;
-    }
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .card {
-      background: rgba(255,255,255,0.06);
-      padding: 25px;
-      border-radius: 10px;
-    }
-    footer {
-      margin: 60px 0 30px;
-      font-size: 0.9em;
-      color: #cbb78c;
-    }
-  </style>
+ <style>
+  :root{
+    --bg1:#090415;
+    --bg2:#120726;
+    --bg3:#05010c;
+
+    --text:#efe7ff;
+    --muted:#cdbbffcc;
+
+    --gold1:#f7d37a;
+    --gold2:#b8892a;
+
+    --green1:#62f2b3;
+    --green2:#1bbd7c;
+
+    --card:rgba(20,10,40,.55);
+    --cardBorder:rgba(255,215,140,.18);
+    --glass:rgba(255,255,255,.06);
+  }
+
+  *{ box-sizing:border-box; }
+  html,body{ height:100%; }
+  body{
+    margin:0;
+    font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    color:var(--text);
+    background:
+      radial-gradient(1200px 700px at 20% 20%, rgba(160,90,255,.25), transparent 55%),
+      radial-gradient(1000px 600px at 80% 30%, rgba(255,190,110,.18), transparent 55%),
+      radial-gradient(900px 600px at 50% 90%, rgba(60,255,190,.10), transparent 60%),
+      linear-gradient(180deg, var(--bg1), var(--bg2) 45%, var(--bg3));
+    overflow-x:hidden;
+    text-align:center;
+  }
+
+  /* star dust overlay */
+  body::before{
+    content:"";
+    position:fixed;
+    inset:0;
+    pointer-events:none;
+    opacity:.35;
+    background-image:
+      radial-gradient(2px 2px at 20% 30%, rgba(255,255,255,.9) 40%, transparent 41%),
+      radial-gradient(1px 1px at 70% 20%, rgba(255,255,255,.8) 45%, transparent 46%),
+      radial-gradient(1.5px 1.5px at 40% 80%, rgba(255,255,255,.7) 45%, transparent 46%),
+      radial-gradient(1px 1px at 85% 75%, rgba(255,255,255,.7) 45%, transparent 46%),
+      radial-gradient(1px 1px at 10% 75%, rgba(255,255,255,.6) 45%, transparent 46%);
+    filter: blur(.1px);
+  }
+
+  /* top nav bar look (even if your HTML doesn't have it yet, this won't hurt) */
+  .nav{
+    position:sticky;
+    top:0;
+    z-index:20;
+    backdrop-filter: blur(10px);
+    background: linear-gradient(180deg, rgba(10,3,20,.92), rgba(10,3,20,.65));
+    border-bottom:1px solid rgba(255,215,140,.14);
+  }
+  .nav-inner{
+    max-width:1100px;
+    margin:0 auto;
+    padding:14px 18px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:16px;
+  }
+  .brand{
+    display:flex;
+    align-items:center;
+    gap:10px;
+    font-weight:800;
+    letter-spacing:.4px;
+    font-size:20px;
+  }
+  .brand span{
+    background: linear-gradient(90deg, var(--green1), var(--gold1));
+    -webkit-background-clip:text;
+    background-clip:text;
+    color:transparent;
+    text-shadow: 0 0 18px rgba(98,242,179,.18);
+  }
+  .nav a{
+    color:var(--muted);
+    text-decoration:none;
+    font-size:14px;
+    padding:8px 10px;
+    border-radius:10px;
+  }
+  .nav a:hover{ background:rgba(255,255,255,.06); color:var(--text); }
+
+  .btn{
+    display:inline-block;
+    padding:12px 18px;
+    border-radius:14px;
+    text-decoration:none;
+    font-weight:700;
+    letter-spacing:.2px;
+    border:1px solid rgba(255,215,140,.22);
+    box-shadow: 0 10px 30px rgba(0,0,0,.35);
+    transition: transform .12s ease, filter .12s ease;
+  }
+  .btn:hover{ transform: translateY(-1px); filter: brightness(1.05); }
+
+  .btn-gold{
+    color:#2a1700;
+    background: linear-gradient(180deg, var(--gold1), var(--gold2));
+  }
+  .btn-green{
+    color:#02170e;
+    background: linear-gradient(180deg, var(--green1), var(--green2));
+  }
+
+  header{
+    padding:58px 18px 34px;
+  }
+
+  .coin{
+    width:160px;
+    height:auto;
+    display:block;
+    margin:0 auto 18px;
+    border-radius:18px;
+    box-shadow:
+      0 0 0 1px rgba(255,215,140,.12),
+      0 18px 55px rgba(255,170,70,.18),
+      0 18px 55px rgba(98,242,179,.12);
+  }
+
+  h1{
+    margin:0;
+    font-size:48px;
+    line-height:1.1;
+    letter-spacing:.2px;
+    text-shadow: 0 18px 45px rgba(0,0,0,.55);
+  }
+  .subtitle{
+    margin:14px auto 0;
+    max-width:820px;
+    font-size:18px;
+    color:var(--muted);
+  }
+
+  .cta{
+    margin-top:22px;
+    display:flex;
+    gap:14px;
+    justify-content:center;
+    flex-wrap:wrap;
+  }
+
+  .section{
+    max-width:1100px;
+    margin:0 auto;
+    padding:24px 18px 70px;
+  }
+
+  .grid{
+    display:grid;
+    grid-template-columns: repeat(3, minmax(0,1fr));
+    gap:16px;
+    margin-top:26px;
+  }
+  @media (max-width: 920px){
+    .grid{ grid-template-columns:1fr; }
+    h1{ font-size:38px; }
+  }
+
+  .card{
+    padding:18px 18px 16px;
+    border-radius:18px;
+    background: linear-gradient(180deg, var(--card), rgba(10,4,18,.35));
+    border:1px solid var(--cardBorder);
+    box-shadow: 0 20px 60px rgba(0,0,0,.35);
+    position:relative;
+    overflow:hidden;
+  }
+  .card::before{
+    content:"";
+    position:absolute;
+    inset:-60px -60px auto auto;
+    width:180px;
+    height:180px;
+    background: radial-gradient(circle at 30% 30%, rgba(247,211,122,.22), transparent 60%);
+    transform: rotate(18deg);
+  }
+  .card h3{
+    margin:0 0 10px;
+    font-size:18px;
+    letter-spacing:.2px;
+  }
+  .card p, .card li{
+    color:var(--muted);
+    font-size:14px;
+    line-height:1.45;
+  }
+  .card ul{
+    margin:12px 0 0;
+    padding-left:18px;
+    text-align:left;
+  }
+
+  .divider{
+    margin:26px auto 0;
+    height:1px;
+    width:min(900px, 92%);
+    background: linear-gradient(90deg, transparent, rgba(255,215,140,.28), transparent);
+  }
+
+  footer{
+    padding:26px 18px 44px;
+    color:rgba(255,255,255,.55);
+    font-size:13px;
+  }
+</style>
+
 </head>
 <body>
 
