Fix HTML structure and style tag placement

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
     body{
+</style>      
+      </head>
+
       margin:0;
       font-family: "Segoe UI", Arial, Helvetica, sans-serif;
       color:var(--text);
