Add head and body structure to index.html
Added head and body sections with content for the webpage.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
     body{
-</style>      
+     
       </head>
 
       margin:0;
@@ -36,7 +36,7 @@
       min-height:100vh;
       overflow-x:hidden;
     }
-
+ 
     /* Fake “stars” layer */
     body::before{
       content:"";
@@ -54,6 +54,21 @@
       filter: blur(.2px);
       z-index:0;
     }
+  </style>
+</head>
+<body>
+<div class="hero">
+  <h1>TSX TaxShield</h1>
+  <p class="tagline">
+    A self-sustaining crypto ecosystem built for everyday people.
+  </p>
+
+  <div class="buttons">
+    <a href="#tokenomics" class="btn gold">Read Tokenomics</a>
+    <a href="#treasury" class="btn outline">View Treasury Model</a>
+  </div>
+</div>
+
 
     a{color:inherit; text-decoration:none}
     .wrap{max-width:1100px; margin:0 auto; padding:0 18px}
