Refactor style section in index.html
Reformatted the style section for better readability.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TSX TaxShield</title>
-  <style>  .cta:hover{filter:brightness(1.08)}
+  <style>  
+    .cta:hover{filter:brightness(1.08)}
 
     /* HERO */
     .hero{
