--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TSX TaxShield</title>
-  <style>  
+  <style> 
+    /* TEMP FIX */
+
     .cta:hover{filter:brightness(1.08)}
 
     /* HERO */
