Refactor CSS styles and clean up code

--- a/index.html
+++ b/index.html
@@ -5,240 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TSX TaxShield</title>
   <style> 
-    /* TEMP FIX */
+/* CLEAN RESET */
+body {
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  background: #0b1020;
+  color: #eaf0ff;
+}
 
-    .cta:hover{filter:brightness(1.08)}
-
-    /* HERO */
-    .hero{
-      position:relative;
-      z-index:1;
-      padding-top:110px;
-      padding-bottom:34px;
-    }
-    .heroCard{
-      border:1px solid var(--line);
-      background: linear-gradient(180deg, rgba(20,6,36,.55), rgba(10,3,18,.45));
-      border-radius:18px;
-      box-shadow: var(--shadow);
-      overflow:hidden;
-    }
-    .heroInner{
-      padding:42px 22px 26px 22px;
-      text-align:center;
-    }
-    .coin{
-      width:148px;
-      height:148px;
-      object-fit:cover;
-      border-radius:18px;
-      border:1px solid rgba(214,177,95,.35);
-      box-shadow: 0 18px 45px rgba(0,0,0,.55);
-      margin: 0 auto 16px auto;
-      display:block;
-      background: rgba(0,0,0,.25);
-    }
-
-    .h1{
-      margin:6px 0 10px 0;
-      font-size:48px;
-      font-weight:900;
-      letter-spacing:.3px;
-      background: linear-gradient(90deg, var(--mint), var(--gold2));
-      -webkit-background-clip:text;
-      background-clip:text;
-      color:transparent;
-      text-shadow: 0 0 26px rgba(214,177,95,.12);
-    }
-
-    .subtitle{
-      margin:0;
-      font-size:28px;
-      font-weight:800;
-      color: rgba(240,211,139,.95);
-      line-height:1.15;
-      text-shadow: 0 10px 32px rgba(0,0,0,.55);
-    }
-
-    .desc{
-      margin:18px auto 0 auto;
-      max-width:780px;
-      color:var(--muted);
-      font-size:16px;
-      line-height:1.6;
-    }
-
-    .buttons{
-      margin-top:18px;
-      display:flex;
-      justify-content:center;
-      gap:14px;
-      flex-wrap:wrap;
-    }
-    .btn{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      gap:10px;
-      padding:12px 18px;
-      border-radius:12px;
-      border:1px solid rgba(214,177,95,.35);
-      background: rgba(214,177,95,.12);
-      color: rgba(240,211,139,.95);
-      font-weight:900;
-      box-shadow: 0 14px 28px rgba(0,0,0,.35);
-      min-width:210px;
-    }
-    .btn:hover{filter:brightness(1.08)}
-    .btn.alt{
-      border-color: rgba(79,227,138,.35);
-      background: rgba(79,227,138,.12);
-      color: rgba(210,255,228,.95);
-    }
-
-    .launchLine{
-      margin-top:18px;
-      color: rgba(239,231,255,.70);
-      font-weight:700;
-      letter-spacing:.2px;
-    }
-    .launchLine b{color:rgba(240,211,139,.95)}
-    .dividerGlow{
-      height:1px;
-      margin:22px 0 0 0;
-      background: linear-gradient(90deg, transparent, rgba(214,177,95,.55), transparent);
-    }
-
-    /* Cards */
-    .grid{
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap:16px;
-      padding:22px;
-      border-top:1px solid rgba(214,177,95,.18);
-      background: rgba(0,0,0,.10);
-    }
-    .card{
-      border-radius:16px;
-      border:1px solid rgba(214,177,95,.22);
-      background: rgba(10,3,18,.40);
-      padding:18px 16px;
-      box-shadow: 0 14px 28px rgba(0,0,0,.35);
-      min-height:160px;
-    }
-    .cardTitle{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      font-size:16px;
-      font-weight:900;
-      color: rgba(240,211,139,.95);
-      margin:0 0 8px 0;
-    }
-    .icon{
-      width:34px; height:34px;
-      display:grid; place-items:center;
-      border-radius:12px;
-      border:1px solid rgba(214,177,95,.25);
-      background: rgba(214,177,95,.10);
-      font-size:18px;
-    }
-    .card p{
-      margin:0;
-      color: rgba(239,231,255,.72);
-      line-height:1.55;
-      font-size:14px;
-    }
-
-    /* Sections */
-    section{
-      position:relative;
-      z-index:1;
-      padding:22px 0;
-    }
-    .sectionCard{
-      border-radius:18px;
-      border:1px solid rgba(214,177,95,.22);
-      background: rgba(10,3,18,.35);
-      box-shadow: var(--shadow);
-      padding:18px;
-    }
-    .sectionTitle{
-      margin:0 0 6px 0;
-      font-size:20px;
-      font-weight:900;
-      color: rgba(240,211,139,.95);
-    }
-    .sectionText{
-      margin:0;
-      color: rgba(239,231,255,.75);
-      line-height:1.6;
-    }
-
-    footer{
-      padding:30px 0 40px 0;
-      color: rgba(239,231,255,.55);
-      text-align:center;
-      position:relative;
-      z-index:1;
-    }
-
-    @media (max-width: 900px){
-      .grid{grid-template-columns:1fr; }
-      .h1{font-size:38px}
-      .subtitle{font-size:22px}
-      .links{display:none;} /* keeps it simple on smaller screens */
-    }
-    
-    :root{
-      --bg1:#07030c;
-      --bg2:#140624;
-      --bg3:#24083a;
-      --gold:#d6b15f;
-      --gold2:#f0d38b;
-      --mint:#4fe38a;
-      --text:#efe7ff;
-      --muted:rgba(239,231,255,.75);
-      --glass:rgba(18,8,28,.55);
-      --line:rgba(214,177,95,.35);
-      --shadow: 0 18px 50px rgba(0,0,0,.55);
-    }
-
-    *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{
-     
-      </head>
-
-      margin:0;
-      font-family: "Segoe UI", Arial, Helvetica, sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(900px 500px at 20% 20%, rgba(214,177,95,.18), transparent 60%),
-        radial-gradient(700px 500px at 80% 30%, rgba(79,227,138,.10), transparent 55%),
-        radial-gradient(900px 700px at 50% 90%, rgba(132,70,210,.22), transparent 60%),
-        linear-gradient(180deg, var(--bg1), var(--bg2) 35%, var(--bg3) 100%);
-      min-height:100vh;
-      overflow-x:hidden;
-    }
- 
-    /* Fake “stars” layer */
-    body::before{
-      content:"";
-      position:fixed;
-      inset:0;
-      pointer-events:none;
-      background:
-        radial-gradient(2px 2px at 15% 20%, rgba(255,255,255,.9) 40%, transparent 45%),
-        radial-gradient(2px 2px at 55% 15%, rgba(255,255,255,.7) 40%, transparent 45%),
-        radial-gradient(1px 1px at 75% 35%, rgba(255,255,255,.8) 40%, transparent 45%),
-        radial-gradient(1px 1px at 35% 65%, rgba(255,255,255,.65) 40%, transparent 45%),
-        radial-gradient(2px 2px at 85% 75%, rgba(255,255,255,.7) 40%, transparent 45%),
-        radial-gradient(1px 1px at 25% 85%, rgba(255,255,255,.65) 40%, transparent 45%);
-      opacity:.35;
-      filter: blur(.2px);
-      z-index:0;
-    }
   </style>
   /* END STYLE FIX */
 
