Add header with TSX Coin logo and title
Added a header with logo and title to the page.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ body {
 
 </head>
 <body>
+  <header style="padding:16px 24px; font-weight:600;">
+  <img src="tsx-coin.png" alt="TSX Coin" style="height:42px; vertical-align:middle; margin-right:12px;">
+  <span>TSX TaxShield</span>
+</header>
+
 <div class="hero">
   <h1>TSX TaxShield</h1>
   <p class="tagline">
