Replace image source for TSX Coin logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ body {
 </head>
 <body>
   <header style="padding:16px 24px; font-weight:600;">
-  <img src="tsx-coin.png" alt="TSX Coin" style="height:42px; vertical-align:middle; margin-right:12px;">
+  <img src="b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX Coin" style="height:42px; vertical-align:middle; margin-right:12px;">
+
   <span>TSX TaxShield</span>
 </header>
 
