Add tokenomics details to tokenomics.html
Added tokenomics information including supply, fees, launch protections, and deflation goals.

--- a/tokenomics.html
+++ b/tokenomics.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TSX TaxShield — Tokenomics</title>
+  <style>
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: linear-gradient(180deg, #070b14, #0b1020);
+      color:#eaf0ff;
+    }
+    .wrap{max-width:900px;margin:0 auto;padding:28px 18px 70px}
+    a{color:inherit}
+    .top{display:flex;gap:14px;align-items:center;margin-bottom:18px}
+    .top img{height:42px;width:auto}
+    h1{margin:6px 0 10px;font-size:34px}
+    h2{margin:24px 0 10px;font-size:18px}
+    p{line-height:1.6;color:rgba(234,240,255,.85)}
+    .card{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.10);border-radius:14px;padding:16px 16px}
+    .muted{color:rgba(234,240,255,.7)}
+    ul{line-height:1.7;color:rgba(234,240,255,.85)}
+    code{background:rgba(0,0,0,.25);padding:2px 6px;border-radius:8px}
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <div class="top">
+      <img src="b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX Coin">
+      <div>
+        <div class="muted"><a href="./">← Back to Home</a></div>
+        <h1>Tokenomics</h1>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>Supply</h2>
+      <p><strong>Fixed supply:</strong> 100 trillion TSX minted once at genesis. No inflationary minting.</p>
+
+      <h2>Base fee</h2>
+      <p><strong>3% transaction fee</strong> designed to fund the ecosystem without pricing people out.</p>
+      <ul>
+        <li><strong>1.0%</strong> → Treasury</li>
+        <li><strong>1.0%</strong> → Stability & External Assets (BTC/SOL/stables/ETFs/gold/silver)</li>
+        <li><strong>0.5%</strong> → Controlled re-circulation</li>
+        <li><strong>0.5%</strong> → Creator (operations + personal income without dumping)</li>
+      </ul>
+
+      <h2>Launch protections</h2>
+      <ul>
+        <li><strong>90-day max transaction cap</strong> to reduce whale/bot dominance early.</li>
+        <li><strong>Adaptive fees</strong> can temporarily rise (up to ~10%) during attacks with transparent admin control.</li>
+      </ul>
+
+      <h2>Deflation goal</h2>
+      <p>Long-term deflation through buybacks & burns, funded by real activity.</p>
+
+      <h2>Positioning</h2>
+      <p class="muted">No profit promises. No hype. Utility-first framing and transparency-first posture.</p>
+    </div>
+  </div>
+</body>
+</html>
 
