--- a/index.html
+++ b/index.html
@@ -197,11 +197,12 @@
       </div>
 
       <div class="links">
-        <a class="pill" href="#tokenomics">Tokenomics</a>
-        <a class="pill" href="#treasury">Treasury</a>
-        <a class="pill" href="#raise">Raise</a>
-        <a class="pill" href="#community">Community</a>
-        <a class="pill" href="#docs">Docs</a>
+        <a class="pill" href="tokenomics.html">Tokenomics</a>
+<a class="pill" href="treasury.html">Treasury</a>
+<a class="pill" href="raise.html">Raise</a>
+<a class="pill" href="community.html">Community</a>
+<a class="pill" href="docs.html">Docs</a>
+
       </div>
     </div>
   </div>
