Update links to tokenomics and treasury pages

--- a/index.html
+++ b/index.html
@@ -213,8 +213,10 @@
       <p class="tagline">A self-sustaining crypto ecosystem built for everyday people.</p>
 
       <div class="buttons">
-        <a class="btn gold" href="#tokenomics">Read Tokenomics</a>
-        <a class="btn" href="#treasury">View Treasury Model</a>
+      <a class="btn gold" href="tokenomics.html">Read Tokenomics</a>
+<a class="btn" href="treasury.html">View Treasury Model</a>
+
+        
       </div>
     </section>
 
