Add Treasury details and allocation model
Added detailed information about the Treasury, including its purpose, funding sources, allocation model, and rules.

--- a/treasury.html
+++ b/treasury.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TSX TaxShield — Treasury</title>
+  <style>
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: linear-gradient(180deg, #070b14, #0b1020);
+      color:#eaf0ff;
+    }
+    .wrap{max-width:900px;margin:0 auto;padding:28px 18px 70px}
+    a{color:inherit}
+    .top{display:flex;gap:14px;align-items:center;margin-bottom:18px}
+    .top img{height:42px;width:auto}
+    h1{margin:6px 0 10px;font-size:34px}
+    h2{margin:24px 0 10px;font-size:18px}
+    p{line-height:1.6;color:rgba(234,240,255,.85)}
+    .card{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.10);border-radius:14px;padding:16px 16px}
+    .muted{color:rgba(234,240,255,.7)}
+    ul{line-height:1.7;color:rgba(234,240,255,.85)}
+    code{background:rgba(0,0,0,.25);padding:2px 6px;border-radius:8px}
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <div class="top">
+      <img src="b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX Coin">
+      <div>
+        <div class="muted"><a href="./">← Back to Home</a></div>
+        <h1>Treasury</h1>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>What the Treasury is</h2>
+      <p>
+        The Treasury is the engine that makes TSX sustainable. It collects a portion of ecosystem fees
+        and reinvests them to strengthen long-term stability and resilience.
+      </p>
+
+      <h2>Where Treasury funding comes from</h2>
+      <p>
+        From the base transaction fee system. TSX is designed to generate ongoing cash flow through real usage.
+      </p>
+      <ul>
+        <li><strong>1.0%</strong> → Treasury (core engine)</li>
+        <li><strong>1.0%</strong> → Stability & External Assets (separate bucket that supports long-term resilience)</li>
+        <li><strong>0.5%</strong> → Controlled re-circulation</li>
+        <li><strong>0.5%</strong> → Creator (operations + personal income without dumping)</li>
+      </ul>
+
+      <h2>Treasury allocation model (locked concept)</h2>
+      <p class="muted">Conceptual allocation (transparent, no leverage):</p>
+      <ul>
+        <li><strong>25%</strong> → TSX buybacks & burns (deflation pressure over time)</li>
+        <li><strong>25%</strong> → Stable assets (includes future Raise support)</li>
+        <li><strong>25%</strong> → Broader markets (BTC, SOL, ETFs)</li>
+        <li><strong>25%</strong> → Hard assets (gold, silver)</li>
+      </ul>
+
+      <h2>Rules of the Treasury</h2>
+      <ul>
+        <li><strong>No leverage</strong> (no debt, no risky compounding)</li>
+        <li><strong>No promises</strong> (no guaranteed returns)</li>
+        <li><strong>Transparency-first</strong> (clear reporting and public posture)</li>
+      </ul>
+
+      <h2>Why this matters</h2>
+      <p>
+        The goal is a token that strengthens itself over time instead of relying on hype. The Treasury is how TSX
+        earns stability and durability—one transaction at a time.
+      </p>
+    </div>
+  </div>
+</body>
+</html>
 
